fix(input): cropping the bottom part of y letter (#229)

--- a/src/Input/InputMixins.scss
+++ b/src/Input/InputMixins.scss
@@ -9,7 +9,6 @@
     .input {
         display: block;
         line-height: 24px;
-        height: $height - 2px;
         font-size: $fontSize;
     }
 }
